--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ header {
 }
 
 h1 {
-    color: rgb(240, 238, 242);
+    color: rgb(232, 219, 219);
     background-color: rgb(0, 0, 0);
     font-size: 35pt;
     display: inline-block;
@@ -61,3 +61,6 @@ nav ul li {
 
 }
 
+.sections {
+    color: rgb(254, 254, 254);
+}
