--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 * {
-    /* border: 1px solid rgb(211, 13, 211); */
+    border: 1px solid rgb(211, 13, 211);
     font-family: Arial, Helvetica, sans-serif;
     padding: 0%;
     margin: 0%;
@@ -42,7 +42,8 @@ nav {
     margin:0px;
     text-align: right;
     padding: 10px;
-
+    
+    
 
 
 
@@ -54,13 +55,38 @@ nav ul li {
     display: inline-block;
     text-align: right;
     text-decoration: underline;
-    color: rgb(248, 248, 248);
+    color: rgb(250, 243, 243);
     font-size: 18pt;
     padding: 10px;
     margin:10px ;
 
 }
 
-.sections {
-    color: rgb(254, 254, 254);
+h2 {
+    display: inline;
+    color: #000000;
+    background-color: rgb(144, 144, 184);
+    line-height: 500px;
+    font-size:60pt;
 }
+
+.sections {
+    color: #000000;
+    background-color: blue;
+    font-size:50pt;
+    margin-left: 300%;
+    padding:0%;
+   
+}
+
+p {
+    font-size: 200%;
+}
+
+.flex-container {
+
+    margin:500px;
+    padding: 500px;
+
+}
+
