--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,17 @@ h2 {
     font-size:60pt;
 }
 
+.page-section {
+    margin: 25px 0;
+    padding: 10px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: space-between;
+
+}
+
 .sections {
     color: #000000;
     background-color: blue;
@@ -83,10 +94,44 @@ p {
     font-size: 200%;
 }
 
-.flex-container {
+.work-flex-container {
 
-    margin:500px;
-    padding: 500px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items:flex-end
+    
 
 }
+
+
+.image-box {
+    flex: 1 0 200px;
+    
+}
+
+.image-box img {
+    max-width: 200px;
+    height: 200px;
+   
+     
+}
+
+.main {
+    width: 100%;
+    height: 100%;
+    
+    
+}
+
+h3,span {
+  
+    display: block;
+    padding-top:10px;
+
+    width: 200px;
+    background-color: rgb(168, 11, 240);
+}
+
+
 
