--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 * {
-    border: 1px solid rgb(211, 13, 211);
+    border: 1px solid rgb(211, 13, 211); 
     font-family: Arial, Helvetica, sans-serif;
-    padding: 0%;
-    margin: 0%;
+    padding:0%;
+    margin:0%;
 }
 
 body {
@@ -17,21 +17,22 @@ header {
 
 .hero {
     background-image: url("../images/heroimage3.jpg");
-    height: 300px;
+    height: 180px;
     width: 100%;
     margin-bottom: 12px;
     background-size: cover;
     background-position:center;
+  
 }
 
-h1 {
+.name {
     color: rgb(232, 219, 219);
     background-color: rgb(0, 0, 0);
-    font-size: 35pt;
+    font-size: 25pt;
     display: inline-block;
-    margin: 4px;
-    margin-left: 8px;
-    padding: 12px;
+    margin-left: 6px;
+    margin-right: auto;
+    padding: 5px;
     position:absolute;
 
 }
@@ -67,7 +68,15 @@ h2 {
     color: #000000;
     background-color: rgb(144, 144, 184);
     line-height: 500px;
-    font-size:60pt;
+    font-size:30pt;
+}
+
+.hero-text {
+  
+    margin
+    padding:
+ 
+    
 }
 
 .page-section {
@@ -95,31 +104,34 @@ p {
 }
 
 .work-flex-container {
-
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items:flex-end
+    justify-content:center;
+   
     
 
 }
 
 
-.image-box {
-    flex: 1 0 200px;
+.work-flex-container {
+    /* flex: 1 0 200px; */
     
 }
 
-.image-box img {
+.flex-item{
+    width: 500px;
+}
+
+/* .image-box img {
     max-width: 200px;
     height: 200px;
    
      
-}
+} */
 
-.main {
-    width: 100%;
-    height: 100%;
+.main-flex-item {
+    width: 10%;
+    height: 50%;
     
     
 }
