--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,153 +1,169 @@
 * {
-    border: 1px solid rgb(211, 13, 211);    
     font-family: Arial, Helvetica, sans-serif;
-    padding:0%;
-    margin:0%;
+    padding: 0;
+    margin: 0;
 }
 
 body {
     position: relative;
+    background-color: rgb(253, 253, 255);
+
+
 }
+
+
 
 header {
-    background-color: rgb(10, 2, 2);
+    background-color: rgb(226, 13, 13);
     height: 100px;
-  
+    margin: 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* position: fixed; */
 
 }
 
-.hero {
-    background-image: url("../images/heroimage3.jpg");
-    margin: auto;
-    padding: auto;
-    height:200px;
-    width: 100%;
-    background-size: cover;
-    background-position:center;
-    position: relative; 
-  
-}
 
-.hero-text {
-    margin-left:0;
-    margin-top: -5%; 
-    
-}  
-
-.hero-text h2 {
-color: rgb(235, 226, 226);
-font-size: 30pt;
-margin-left: 75%;
-margin-top: 90%;
-
-
-   
-}  
 
 .name {
     color: rgb(232, 219, 219);
     background-color: rgb(177, 112, 217);
-    font-size: 20pt;
+    font-size: 20px;
     display: inline-block;
-    margin-top: 9px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 2px;
-    position:absolute; 
-    
 
-} 
+    margin-left: 0px;
+
+    padding-left: 20px;
+    padding-right: 5px;
+    /* position:absolute;   */
+
+
+}
 
 nav {
-    position: relative;
-    /* list-style-type: none; */
-
-    margin:0px;
     text-align: right;
-    padding: 26px;
-    
-    
+    /* margin-left:60;  */
+    /* margin-bottom: 5%;
+    margin-top: 90px; */
+    padding: 5px;
+    background-color: cornflowerblue;
 
 
+    /* position: fixed;  */
 
 }
 
-nav li {
-
+li {
     list-style-type: none;
     display: inline;
-    text-align: right;
-    text-decoration: underline;
-    color: rgb(250, 243, 243);
-    font-size: 20pt;
-    padding: 10px;
-    margin:10px ;
+    margin: 20px;
+    /* margin-top: 70px; */
+    height: 100px;
+
+
+
+
 
 }
+
+nav a {
+
+
+    font-size: 20pt;
+    color: rgb(131, 56, 236);
+    background-color: chartreuse;
+    /* margin-top: 70px; */
+    height: 100px;
+    /* position:absolute; */
+
+
+}
+
+
+
+
+
+
+
+.hero {
+    background-image: url("../images/heroimage3.jpg");
+    height: 200px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    /* position: absolute;   */
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-end;
+
+
+}
+
+
+
+.hero-text {
+    /* position: relative; */
+    margin: 20px;
+
+}
+
+.hero-text h2 {
+    color: rgb(235, 226, 226);
+    font-size: 30pt;
+    /* margin-left: 75%;
+margin-top: 50%; */
+
+
+
+}
+
 
 h2 {
     display: inline;
     color: #000000;
     background-color: rgba(144, 144, 184, 0.958);
-    line-height: 500px;
-    font-size:30pt;
+    font-size: 30pt;
 }
-
-
 
 .page-section {
     margin: 25px 0;
     padding: 10px 0;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    align-items: stretch;
+    /* flex-wrap: wrap;
+    align-items: stretch; */
     justify-content: space-between;
 
 }
-
- /* section {
-    color: #000000;
-    background-color: blue;
-    font-size:50pt;
-    margin-left: 300%;
-    padding:0%;
-   
-} */
+.section-header {
+    width: 225px;
+    border-right: 5px solid black;
+}
+.about-content {
+    padding: 20px;
+}
 
 p {
-    font-size: 200%;
+    font-size: 18px;
 }
-
-/* .main {
-    background-image: url(../images/workimage1.jpg);
-}
-
-.prework {
-    background-image: url(../images/workimage2.jpg);
-} */
-
-
-
 
 .work-flex-container {
-    flex: 1 0 200px; 
+    flex: 1 0 200px;
     display: flex;
-    flex-wrap: wrap; 
-     
+    flex-wrap: wrap;
+
 }
 
-.flex-item{
+.flex-item {
     justify-content: center;
     align-items: center;
     flex-direction: row;
     max-width: 200px;
-    height:50%;
+    height: 50%;
     margin: 5px;
     padding: 20px;
-    /* border-style: solid;
-    border-width: 10px;
-    border-color:rgb(111, 194, 254) */
+
 }
 
 
@@ -155,17 +171,15 @@ p {
 .flex-item-main {
     width: 100%;
     height: 50%;
-    
-    
+
+
 }
 
-h3,span {
-  
+h3,
+span {
+
     display: block;
-    padding-top:10px;
+    padding-top: 10px;
     width: 200px;
     background-color: rgb(168, 11, 240);
 }
-
-
-
