--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 
 
 header {
-    background-color: rgb(226, 13, 13);
+    background-color: rgb(0, 0, 0);
     height: 100px;
     margin: 0px;
     display: flex;
@@ -47,7 +47,7 @@ nav {
     /* margin-bottom: 5%;
     margin-top: 90px; */
     padding: 5px;
-    background-color: cornflowerblue;
+    background-color: rgb(0, 0, 0);
 
 
     /* position: fixed;  */
@@ -71,8 +71,7 @@ nav a {
 
 
     font-size: 20pt;
-    color: rgb(131, 56, 236);
-    background-color: chartreuse;
+    color: rgb(232, 226, 241);
     /* margin-top: 70px; */
     height: 100px;
     /* position:absolute; */
@@ -120,7 +119,7 @@ margin-top: 50%; */
 
 
 h2 {
-    display: inline;
+    /* display: inline; */
     color: #000000;
     background-color: rgba(144, 144, 184, 0.958);
     font-size: 30pt;
@@ -131,9 +130,7 @@ h2 {
     padding: 10px 0;
     display: flex;
     flex-direction: row;
-    /* flex-wrap: wrap;
-    align-items: stretch; */
-    justify-content: space-between;
+    justify-content:space-between;
 
 }
 .section-header {
@@ -145,40 +142,69 @@ h2 {
 }
 
 p {
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .work-flex-container {
-    flex: 1 0 200px;
+    flex: 1 0 200px; 
     display: flex;
     flex-wrap: wrap;
 
 }
 
-.flex-item {
+.small-flex-item {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around; 
+    align-items:flex-end;
+    flex-direction: row; 
+    background-color: blue;
+    /* max-width: 200px;
+    height: 50%; */
+    /* margin: 5px; */
+    /* padding: 20px; */
+
+}
+
+
+img {
+    width: 400px;
+    height:200px;
+}
+
+#main-img {
+    /* justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    align-items:flex-end; */
+    display: flex;
+    flex-wrap: nowrap;
     justify-content: center;
+    max-width:800px;
+    height: 400px;
+
+
+} 
+
+/* img {
+    width: 300px;
+    height: 200px;
+    padding: 5px;
+    justify-content:center;
     align-items: center;
     flex-direction: row;
-    max-width: 200px;
-    height: 50%;
-    margin: 5px;
-    padding: 20px;
-
-}
-
-
-
-.flex-item-main {
-    width: 100%;
-    height: 50%;
-
-
-}
+    border:10px solid #f10ac3;
+    
+    
+} */
 
 h3,
 span {
 
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
     padding-top: 10px;
     width: 200px;
     background-color: rgb(168, 11, 240);
