--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,10 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* position: fixed; */
+   
 
 }
+
 
 
 
@@ -43,9 +44,6 @@ header {
 
 nav {
     text-align: right;
-    /* margin-left:60;  */
-    /* margin-bottom: 5%;
-    margin-top: 90px; */
     padding: 5px;
     background-color: rgb(0, 0, 0);
 
@@ -109,6 +107,7 @@ nav a {
 
 .hero-text h2 {
     color: rgb(235, 226, 226);
+    background-color: rgb(177, 112, 217);
     font-size: 30pt;
     /* margin-left: 75%;
 margin-top: 50%; */
@@ -121,7 +120,7 @@ margin-top: 50%; */
 h2 {
     /* display: inline; */
     color: #000000;
-    background-color: rgba(144, 144, 184, 0.958);
+    /* background-color: rgba(144, 144, 184, 0.958); */
     font-size: 30pt;
 }
 
@@ -143,13 +142,21 @@ h2 {
 
 p {
     font-size: 20px;
+    margin-right: 300px;
 }
 
 .work-flex-container {
-    flex: 1 0 200px; 
+    /* flex: 1 0 200px;  */
     display: flex;
     flex-wrap: wrap;
+    /* justify-content: center; */
 
+}
+.work-flex-item:first-child{
+    min-height: 400px;
+    flex-basis: 100%;
+    margin-left: 20px;
+    width: 100px;
 }
 
 .small-flex-item {
@@ -158,7 +165,7 @@ p {
     justify-content: space-around; 
     align-items:flex-end;
     flex-direction: row; 
-    background-color: blue;
+    /* background-color: blue; */
     /* max-width: 200px;
     height: 50%; */
     /* margin: 5px; */
@@ -167,24 +174,62 @@ p {
 }
 
 
-img {
+/* img {
     width: 400px;
     height:200px;
-}
+    border: 5px solid rgb(175, 91, 244);
+    display: flex;
+    justify-content: center;
+}  */
 
 #main-img {
-    /* justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    align-items:flex-end; */
+    /* background-image: url(../images/workimage1.jpg);  */
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
-    max-width:800px;
+    
+    /* max-width:100px;
+    height: 200px; */
+
+
+}
+#main-img{
+    background-image: url("../images/workimage1.jpg");
     height: 400px;
+    width: 800px;
+    /* background-size: cover;
+    background-position: center; */
+    /* position: absolute;   */
+    /* display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center; */
+}
+.prework{
+    background-image: url("../images/workimage2.jpg");
+    height: 200px;
+    width: 400px;
+    background-size: cover;
+    background-position: center;
+    /* position: absolute;   */
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+}
 
-
-} 
+.codebase{
+    background-image: url("../images/workimage3.jpg");
+    height: 200px;
+    width: 400px;
+    background-size: cover;
+    background-position: center;
+    /* position: absolute;   */
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+}
 
 /* img {
     width: 300px;
@@ -198,14 +243,58 @@ img {
     
 } */
 
-h3,
-span {
-
+.coming-soon{
+    background-image: url("../images/cs2.jpg");
+    height: 200px;
+    width: 400px;
+    background-size: cover;
+    background-position: center;
+    /* position: absolute;   */
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+}
+
+.coming-soon{
+    background-image: url("../images/cs2.jpg");
+    height: 200px;
+    width: 400px;
+    background-size: cover;
+    background-position: center;
+    /* position: absolute;   */
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+}
+
+/* h3,
+span { */
+
+    /* display: flex;
     flex-wrap: wrap;
     justify-content: center;
     flex-direction: row;
+    text-align: right; */
+    /* margin: -55px;
     padding-top: 10px;
     width: 200px;
     background-color: rgb(168, 11, 240);
+   
+} */
+
+ul #contact-info { 
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center; 
+    color: blueviolet;
+    font-size: 15pt;
+    margin-bottom: 500px;
 }
+
+/* @media screen and (max-width: 821px) {
+    header {
+      width: 50%;
+    }
+  } */
